@@ -1,5 +1,5 @@
 Package: GWASTools
-Version: 1.11.0
+Version: 1.11.1
 Type: Package
 Title: Tools for Genome Wide Association Studies
 Description: Classes for storing very large GWAS data sets and annotation, and functions for GWAS data cleaning and analysis.
@@ -21,23 +21,23 @@ Collate: utils.R AllGenerics.R AllClasses.R genotypeToCharacter.R
   ncdfAddData.R ncdfAddIntensity.R ncdfCheckIntensity.R ncdfCheckGenotype.R
   ncdfCreate.R ncdfSubset.R ncdfSubsetCheck.R
   BAFfromClusterMeans.R BAFfromGenotypes.R
-  sdByScanChromWindow.R medianSdOverAutosomes.R meanSdByChromWindow.R findBAFvariance.R 
-  anomSegmentBAF.R anomFilterBAF.R anomDetectBAF.R 
-  LOHfind.R LOHselectAnoms.R anomDetectLOH.R 
+  sdByScanChromWindow.R medianSdOverAutosomes.R meanSdByChromWindow.R findBAFvariance.R
+  anomSegmentBAF.R anomFilterBAF.R anomDetectBAF.R
+  LOHfind.R LOHselectAnoms.R anomDetectLOH.R
   anomSegStats.R anomStatsPlot.R anomIdentifyLowQuality.R
   ncdfSetMissingGenotypes.R gdsSetMissingGenotypes.R
-  alleleFrequency.R apartSnpSelection.R 
-  assocTestCPH.R assocTestFisherExact.R assocTestRegression.R 
-  batchChisqTest.R batchFisherTest.R chromIntensityPlot.R duplicateDiscordance.R 
+  alleleFrequency.R apartSnpSelection.R
+  assocTestCPH.R assocTestFisherExact.R assocTestRegression.R
+  batchChisqTest.R batchFisherTest.R chromIntensityPlot.R duplicateDiscordance.R
   plinkUtils.R snpStats.R
   duplicateDiscordanceAcrossDatasets.R duplicateDiscordanceProbability.R
   genoClusterPlot.R genoClusterPlotByBatch.R gwasExactHW.R hetByScanChrom.R
-  hetBySnpSex.R intensityOutliersPlot.R manhattanPlot.R mendelErr.R 
+  hetBySnpSex.R intensityOutliersPlot.R manhattanPlot.R mendelErr.R
   meanIntensityByScanChrom.R missingGenotypeByScanChrom.R missingGenotypeBySnpSex.R
   pseudoautoIntensityPlot.R qqPlot.R qualityScoreByScan.R qualityScoreBySnp.R
   snpCorrelationPlot.R
   ibdAreasDraw.R ibdAssignRelatedness.R ibdPlot.R findRelationsMeanVar.R
-  pedigreeCheck.R pedigreeDeleteDuplicates.R 
+  pedigreeCheck.R pedigreeDeleteDuplicates.R
   pedigreePairwiseRelatedness.R pedigreeMaxUnrelated.R
   convertNcdfGds.R convertVcfGds.R ncdfImputedDosage.R
   simulateGenotypeMatrix.R simulateIntensityMatrix.R
